# my-rust-site

./: .gitignore  Cargo.toml  README.md  run-local.sh
src/: constants.rs  contexts.rs  main.rs  responses.rs  users.txt
static/: project.js  style.css
static/rust-site/: about.html.tera  contexts.rs  header.html.tera  login.html.tera  main.rs  project_site.html.tera  register.html.tera
templates/: about.html.tera  header.html.tera  index.html.tera  login.html.tera  project_site.html.tera
